avoid unnecessary wrapping on mobile (for the bestest QA ever, @krupa)

--- a/media/css/mobile/header.less
+++ b/media/css/mobile/header.less
@@ -135,7 +135,7 @@ header #auth-nav li {
 }
 
 .mini-header .site-title {
-    padding: 4px 120px 0 0;
+    padding: 4px 80px 0 0;
     a {
         font-size: 28px;
         line-height: 50px;
